Add grant-only case sharing
